# WinterDrone

./: .gitmodules  CMakeLists.txt  README.md  main.c
config/: config.h
drivers/: CMakeLists.txt
drivers/bus/: i2c.c  i2c.h
drivers/ekf/: ekf.c  ekf.h
drivers/motor/: motor.c  motor.h
drivers/sensors/: bmp280.c  bmp280.h  mpu6050.c  mpu6050.h
drivers/wifi/: server.c  wifi.c  wifi.h
freeRTOS/: CMakeLists.txt
mongoose/: mongoose_config.h
motor/: CMakeLists.txt  motor.c
sensors/: CMakeLists.txt  mpu.c  mpu.h  sensors.c  sensors.h
src/: main.c
src/assets/: combine.py  combined_index.html  index.html  index.js  preprocess_html.sh  style.css
src/core/: CMakeLists.txt
src/core/ekf/: ekf.c  ekf.h
src/core/linalg/: linalg.c  linalg.h
src/core/pid/: pid.c  pid.h
src/drivers/: CMakeLists.txt
src/drivers/battery/: battery.c  battery.h
src/drivers/bus/: i2c.c
src/drivers/motor/: motor.c  motor.h
src/drivers/sensors/: bmp280.c  bmp280.h  mpu6050.c  mpu6050.h
src/drivers/wifi/: combined_html.h  wifi.c  wifi.h
src/freeRTOS/: FreeRTOSConfig.h
src/mongoose/: CMakeLists.txt
src/tasks/: CMakeLists.txt  combined_html.h  pid_task.c  pid_task.h  sensors_task.c  sensors_task.h  shared_data.c  shared_data.h  wifi_server_task.c  wifi_server_task.h
